# Marble

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  Nucleus.sln  README.md  premake5.lua
Editor/: CMakeLists.txt
Editor/assets/shaders/: Texture.glsl
Editor/assets/textures/: circle.xcf
Editor/src/: Archive.h  AssetPath.h  Editor.cpp  Editor.h  EditorComponent.cpp  EditorComponent.h  SandboxApp.cpp
Examples/2DNoise/assets/shaders/: FlatColor.glsl  WhiteColor.glsl
Examples/2DNoise/src/: Noise2D.cpp  Noise2D.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Examples/BatchRenderer/src/: Sandbox2D.cpp  SandboxApp.cpp
Examples/Sandbox/src/: Noise2D.cpp  Noise2D.h  Player.h  TerrainColorMap.h
Marble/: CMakeLists.txt
Marble/src/: Marble.h  mblpch.cpp  mblpch.h
Marble/src/Marble/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  TimeStep.h  Window.cpp  Window.h
Marble/src/Marble/Debug/: Instrumentor.h
Marble/src/Marble/ECS/: ECS.h  EntityIndex.h  MemoryAllocator.h
Marble/src/Marble/ECS/Entity/: ComponentSystem.h  EntityDefinitions.h  EntityManager.cpp  EntityManager.h
Marble/src/Marble/ECS/Memory/: MemoryAllocator.h  MemoryCaster.h
Marble/src/Marble/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Marble/src/Marble/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Marble/src/Marble/Noise/: SimplexNoise.cpp  SimplexNoise.h
Marble/src/Marble/Random/: Lehmer.h
Marble/src/Marble/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer2DQuadShader.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Marble/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLVertexArray.cpp
Marble/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Marble/src/RendererAPI/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Nucleus/: Nucleus.vcxproj  Nucleus.vcxproj.filters
Nucleus/src/: Nucleus.h  Test.cpp  Test.h  ncpch.h
Nucleus/src/Nucleus/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Nucleus/src/Nucleus/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  TimeStep.h  Window.cpp  Window.h
Nucleus/src/Nucleus/Debug/: Instrumentor.h
Nucleus/src/Nucleus/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Nucleus/src/Nucleus/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Nucleus/src/Nucleus/Noise/: SimplexNoise.cpp  SimplexNoise.h
Nucleus/src/Nucleus/Random/: Lehmer.h
Nucleus/src/Nucleus/Renderer/: BatchRenderer2D.cpp  BatchRenderer2D.h  Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Nucleus/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Nucleus/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  NucleusProfile-Runtime.json  NucleusProfile-Shutdown.json  NucleusProfile-Startup.json  Sandbox.vcxproj  imgui.ini
Sandbox/assets/shaders/: BatchShader.glsl  FlatColor.glsl  Texture.glsl
Sandbox/src/: Application.cpp  Area2D.cpp  Area2D.h  AssetPath.h  Ball.cpp  Ball.h  CameraController.h  Components.h  Container2D.cpp  Container2D.h  Editor.cpp  Editor.h  EditorComponent.cpp  Floor.h  Noise2D.cpp  Noise2D.h  ObjectContainerManager2D.cpp  ObjectContainerManager2D.h  Player.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  TerrainColorMap.cpp  TerrainColorMap.h  Timer.h
bin-int/Debug-x64/Nucleus/: vc141.idb
bin-int/Debug-x64/Nucleus/Nucleus.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Nucleus.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/Sandbox/: vc141.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
scripts/: Linux-GenProjects.sh  Win-GenProjects.bat
scripts/vscProjectFiles/: launch.json  tasks.json
